--- a/style.css
+++ b/style.css
@@ -1,15 +1,16 @@
-.body{
-    background-image:pn6png;
+body{
+    background-color:black;
+    color: white;
+    
 }
 
 
 .navbar{
-    text-decoration: none;
-    gap: 5%;
-    list-style: none;
-    padding-inline-start: 5%;
-    padding-inline: 3%;
-}
+ height: 50px;
+ width: 150%;
+background-color: antiquewhite;
+ padding-top: 20px;
+      }
 .general{
 grid-template-columns: repeat(2,1fr);
 display: grid;
@@ -25,6 +26,15 @@ border-radius: 10%;
 border: none;
 background-color: greenyellow;
 padding: 3%;
+}
+.batt{
+    margin-left: 10%;
+}
+.table{
+    width: 100%;
+    height: 80%;
+    border-collapse: collapse;
+    
 }
 
 
@@ -50,3 +60,68 @@ padding: 3%;
     display: grid;
     grid-template-columns: repeat(2,1);
 }
+.table{
+    margin-left: 10%;
+    padding: 2%;
+}
+.words3{
+    display: grid;
+    grid-template-columns: repeat(2,1);
+}
+.words3 .w1{
+    border-radius: 20%;
+    margin-left: 30%;
+    padding-top: 10%; 
+     
+}
+.words3 .z1{
+margin-left:30% ;
+}
+.but9{
+    text-decoration: none;
+    background-color: rgb(44, 204, 30);
+    border: none;
+    border-radius: 20%;
+    padding: 3%;
+}
+.words4{
+    grid-template-columns: repeat(3,1);
+    display: grid; 
+    margin-left: 20%;
+
+}
+.but10{
+    background-color: rgb(54, 47, 47);
+    border: none;
+    border-radius: 10%;
+    color: green;
+    padding: 2%;
+    margin-bottom:10% ;
+    
+}
+.z2 .but11{
+    padding: 10%;
+    background-color: rgb(144, 198, 207);
+    margin-bottom: 5%;
+}
+.w3 .but12{
+    padding:10%;
+    background-color: rgb(226, 43, 226);
+    margin-bottom: 5%;
+}
+.z4{
+    
+}
+
+.footer{
+    display: flex;
+    gap: 20%;
+    background-color: black;
+    text-decoration: none;
+    padding: 3%;
+    color: white;
+  
+  } 
+  
+
+
